# mgws

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/dashboard/: CMakeLists.txt
apps/dashboard/inc/: dashboard.h  mqtt.h  websock.h
apps/dashboard/src/: dashboard.cpp  main.cpp  mqtt.cpp  websock.cpp
apps/webrtc/: CMakeLists.txt
apps/webrtc/inc/: peer.h  webrtc.h
apps/webrtc/src/: main.cpp  peer.cpp  webrtc.cpp
certs/: README.md  ca-chain.cert.crt  ca.cert.crt  hq.local.crt  hq.local.key  localhost.crt  localhost.key
certs/tools/: export_ca.sh  export_host.sh  intermediate_ca.conf  make_server_cert.sh  root_ca.conf  server.conf  setup_intermediate_ca.sh  setup_root_ca.sh
db/: mgws.db
inc/: e-man-social-mgws-qr-code-config.json  e-man-social-qr-code-config.json  mgws.h  qr-code-config.json  session.h  sessionmgr.h
inc/nlohmann/: json.hpp
linux/: 10-mgws.conf  README.md
linux/init.d/: mgws
src/: CMakeLists.txt  mgws.cpp  session.cpp  sessionmgr.cpp
www/: .htaccess  index.html
www/css/: dynamic.css
www/dashboard/: index.html  mgws
www/dashboard/css/: dashboard.css
www/dashboard/mgws/: index.js  ui.js  websock.js
www/enroll/: index.html  ui.js
www/mgws/: audio.js  dynamic.css  flex.css  flex_mobile.css  index-prototype.html  index.html  index.js  local.js  peer.js  pulse.js  ui.js  websock.js
www/mgws/sounds/: remote-ring.m4a
www/webrtc/css/: dynamic.css
www/webrtc/enroll/: enroll.css  index.js
www/webrtc/mgws/: index.html  peer.js  theme.js
www/webrtc/mgws/sounds/: local-ring.m4a  telephone-ring.m4a
